[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/network/network.gd" type="Script" id=1]
[ext_resource path="res://scene/battle/battle.gd" type="Script" id=2]
[ext_resource path="res://scene/control/control.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/mobile-camera/mobile_camera.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/waypoint/waypoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/terrain/terrain.tscn" type="PackedScene" id=6]

[node name="battle" type="Node"]
script = ExtResource( 2 )

[node name="terrain" parent="." instance=ExtResource( 6 )]

[node name="waypoint" parent="." instance=ExtResource( 5 )]

[node name="player_holder" type="Node" parent="."]

[node name="mob_holder" type="Node" parent="."]

[node name="network" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="control" parent="." instance=ExtResource( 3 )]

[connection signal="error" from="network" to="." method="_on_network_error"]
[connection signal="player_connected" from="network" to="." method="_on_network_player_connected"]
[connection signal="player_disconnected" from="network" to="." method="_on_network_player_disconnected"]
[connection signal="self_connected" from="network" to="." method="_on_network_self_connected"]
[connection signal="server_disconnected" from="network" to="." method="_on_network_server_disconnected"]
[connection signal="disconnect" from="control" to="." method="_on_control_disconnect"]
[connection signal="host" from="control" to="." method="_on_control_host"]
[connection signal="join" from="control" to="." method="_on_control_join"]
[connection signal="touch_position" from="control" to="." method="_on_control_touch_position"]
